force-app/main/default/objects/SBQQ__Quote__c/fields/About_Yotta_Summary_Type__c.field-meta.xml
<CustomField>
    <fullName>About_Yotta_Summary_Type__c</fullName>
    <label>About Yotta Summary Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brief</fullName>
            </value>
            <value>
                <fullName>Detailed</fullName>
                <default>true</default>
                <label>Detailed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>