force-app/main/default/objects/SBQQ__Quote__c/fields/Adv_Written_Notice_Period_Initial_Cntrct__c.field-meta.xml
<CustomField>
    <fullName>Adv_Written_Notice_Period_Initial_Cntrct__c</fullName>
    <defaultValue>&apos;30 days&apos;</defaultValue>
    <inlineHelpText>If terminated during first / initial contract period 
• Advance written Notice period: &lt;AD1&gt; or the monthly recurring charges in lieu thereof 
• Termination fee: &lt;TF1&gt; of Recurring charges of balance contract period</inlineHelpText>
    <label>Adv Written Notice Period Initial Cntrct</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>