force-app/main/default/objects/SBQQ__Quote__c/fields/Adv_Written_Notice_Period_Renewal_Cntrct__c.field-meta.xml
<CustomField>
    <fullName>Adv_Written_Notice_Period_Renewal_Cntrct__c</fullName>
    <defaultValue>&apos;30 days&apos;</defaultValue>
    <inlineHelpText>2. If terminated during renewal contract period 
• Advance written Notice period: &lt;AD2&gt; or the monthly recurring charges in lieu thereof 
• Termination fee: &lt;TF2&gt; of Recurring charges of balance of renewal contract period</inlineHelpText>
    <label>Adv Written Notice Period Renewal Cntrct</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>