force-app/main/default/objects/SBQQ__Quote__c/fields/Amendment_Contract_Creation__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Contract_Creation__c</fullName>
    <description>Created By Nandish for Integration</description>
    <formula>ISPICKVAL(SCF_Type__c, &apos;Address Change&apos;) ||  
 ISPICKVAL(SCF_Type__c, &apos;Bill Cycle Change&apos;) || 
 ISPICKVAL(SCF_Type__c, &apos;Transfer of Service&apos;)||
ISPICKVAL( SBQQ__Type__c, &apos;Renewal&apos; )</formula>
    <label>Amendment Contract Creation</label>
    <type>Checkbox</type>
</CustomField>