force-app/main/default/objects/SBQQ__Quote__c/fields/Annual_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Annual_Grand_Total__c</fullName>
    <formula>Annual_One_Time_Charge__c + Annual_Recurring_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>