force-app/main/default/objects/SBQQ__Quote__c/fields/Annual_One_Time_Charge__c.field-meta.xml
<CustomField>
    <fullName>Annual_One_Time_Charge__c</fullName>
    <formula>Annual_One_Time_Charge_SOE__c + Annual_One_Time_Charge_SOS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual One Time Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>