force-app/main/default/objects/SBQQ__Quote__c/fields/Annual_One_Time_Charge_SOS__c.field-meta.xml
<CustomField>
    <fullName>Annual_One_Time_Charge_SOS__c</fullName>
    <label>Annual One Time Charge (SOS)</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Price_Dimension_Type__c</field>
        <operation>equals</operation>
        <value>OTC</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Sale_Type__c</field>
        <operation>equals</operation>
        <value>ZTAD</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>