force-app/main/default/objects/SBQQ__Quote__c/fields/Application_details__c.field-meta.xml
<CustomField>
    <fullName>Application_details__c</fullName>
    <label>Application details</label>
    <type>TextArea</type>
</CustomField>