force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <description>Max Rollup from Quote Line</description>
    <label>Approval Level</label>
    <summarizedField>SBQQ__QuoteLine__c.Approval_level__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Approval_Level_Indicator__c</field>
        <operation>notContain</operation>
        <value>flag_green</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>