force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Level_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Indicator__c</fullName>
    <description>[GG]This field shows the approval levl as flags</description>
    <formula>IF(Approval_Level__c =0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;0&quot;),
IF(Approval_Level__c &gt;= 1, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;1&quot;),&apos;&apos;)&amp;&apos; &apos;&amp;
IF(Approval_Level__c &gt;= 2, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;2&quot;),&apos;&apos;)&amp; &apos; &apos;&amp;
IF(Approval_Level__c &gt;= 3, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;3&quot;),&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Approval Level Indicator</label>
    <type>Text</type>
</CustomField>