force-app/main/default/objects/SBQQ__Quote__c/fields/Assumptions_and_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Assumptions_and_Exclusions__c</fullName>
    <inlineHelpText>Please use font size of 10</inlineHelpText>
    <label>Assumptions and Exclusions</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>