force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Same_as_Support_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Same_as_Support_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill To Same as Support To</label>
    <type>Checkbox</type>
</CustomField>