force-app/main/default/objects/SBQQ__Quote__c/fields/CEO_s_Margin_Analysis__c.field-meta.xml
<CustomField>
    <fullName>CEO_s_Margin_Analysis__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O9B000000Jf1YUAS/view?fv0=&quot; &amp;Name,&quot;Report&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEO&apos;s Margin Analysis</label>
    <type>Text</type>
</CustomField>