force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Generation_Date__c</fullName>
    <label>Contract Generation Date</label>
    <type>Date</type>
</CustomField>