force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tenure__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.SBQQ__AmendedContract__r.Contract_Tenure_Years__c) &amp; &quot; Years &quot; &amp; TEXT(SBQQ__Opportunity2__r.SBQQ__AmendedContract__r.Contract_Tenure_Months__c) &amp; &quot; Months &quot; &amp;  TEXT(SBQQ__Opportunity2__r.SBQQ__AmendedContract__r.Contract_Tenure_Days__c) &amp; &quot; Days &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Tenure</label>
    <type>Text</type>
</CustomField>