force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Tenure_Days__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tenure_Days__c</fullName>
    <label>Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>