force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Tenure_Month__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tenure_Month__c</fullName>
    <label>Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>