force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Tenure_Year__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tenure_Year__c</fullName>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>