force-app/main/default/objects/SBQQ__Quote__c/fields/Credit_Period__c.field-meta.xml
<CustomField>
    <fullName>Credit_Period__c</fullName>
    <label>Credit Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7 days</fullName>
                <default>true</default>
                <label>7 days</label>
            </value>
            <value>
                <fullName>10 days</fullName>
            </value>
            <value>
                <fullName>15 days</fullName>
            </value>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>45 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>75 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>