force-app/main/default/objects/SBQQ__Quote__c/fields/Currency_Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Currency_Conversion_Factor__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Currency Conversion Factor</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>