force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_PO_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_EndDate__c</fullName>
    <label>Customer PO EndDate</label>
    <type>Date</type>
</CustomField>