force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_PO_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_StartDate__c</fullName>
    <label>Customer PO StartDate</label>
    <type>Date</type>
</CustomField>