force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_PO_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Status__c</fullName>
    <label>Customer PO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO Not Issued</fullName>
            </value>
            <value>
                <fullName>PO Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>