force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_scope_of_work__c.field-meta.xml
<CustomField>
    <fullName>Customer_scope_of_work__c</fullName>
    <label>Customer scope of work</label>
    <type>TextArea</type>
</CustomField>