force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL( SBQQ__Type__c, &apos;Amendment&apos;),
        ISPICKVAL( SBQQ__Type__c, &apos;Renewal&apos;)
    ),
    &apos;SCF_Line_Editor&apos;,
    &apos;SBQQ__LineEditor&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EditLinesFieldSetName</label>
    <type>Text</type>
</CustomField>