force-app/main/default/objects/SBQQ__Quote__c/fields/Equipment_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Sale_Value__c</fullName>
    <inlineHelpText>Equipment Sale 
• &lt;ES&gt; of Equipment Sale value</inlineHelpText>
    <label>Equipment Sale Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
                <default>true</default>
                <label>100%</label>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>