force-app/main/default/objects/SBQQ__Quote__c/fields/Exclude_from_Validation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in contract deletion flow to exclude the event from certain validations.</description>
    <label>Exclude from Validation</label>
    <type>Checkbox</type>
</CustomField>