force-app/main/default/objects/SBQQ__Quote__c/fields/Execute_SCF_Validations__c.field-meta.xml
<CustomField>
    <fullName>Execute_SCF_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execute SCF Validations</label>
    <type>Checkbox</type>
</CustomField>