force-app/main/default/objects/SBQQ__Quote__c/fields/External_Remarks__c.field-meta.xml
<CustomField>
    <fullName>External_Remarks__c</fullName>
    <inlineHelpText>Please select font size 10</inlineHelpText>
    <label>External Remarks</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>