force-app/main/default/objects/SBQQ__Quote__c/fields/Full_Quote_Cancellation_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Full_Quote_Cancellation_Deactivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Quote Cancellation/Deactivation</label>
    <type>Checkbox</type>
</CustomField>