force-app/main/default/objects/SBQQ__Quote__c/fields/Generate_Deactivation_Term__c.field-meta.xml
<CustomField>
    <fullName>Generate_Deactivation_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Deactivation Term</label>
    <type>Checkbox</type>
</CustomField>