force-app/main/default/objects/SBQQ__Quote__c/fields/Generated_Terms__c.field-meta.xml
<CustomField>
    <fullName>Generated_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generated Terms</label>
    <type>Checkbox</type>
</CustomField>