force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Bandwidth_Product__c.field-meta.xml
<CustomField>
    <fullName>Has_Bandwidth_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify if quote contains bandwidth product or not so that bandwidth code can be executed only on those quotes. Set in custom script</description>
    <label>Has Bandwidth Product?</label>
    <type>Checkbox</type>
</CustomField>