force-app/main/default/objects/SBQQ__Quote__c/fields/HeaderFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>HeaderFieldSetName__c</fullName>
    <formula>IF(
    NOT(ISPICKVAL( SBQQ__Type__c, &apos;Quote&apos;)),
    &apos;SCF_Line_Editor&apos;,
    &apos;SBQQ__LineEditor&apos;
)</formula>
    <label>HeaderFieldSetName</label>
    <type>Text</type>
</CustomField>