force-app/main/default/objects/SBQQ__Quote__c/fields/Internal_Remarks_old__c.field-meta.xml
<CustomField>
    <fullName>Internal_Remarks_old__c</fullName>
    <label>Internal Remarks old</label>
    <type>TextArea</type>
</CustomField>