force-app/main/default/objects/SBQQ__Quote__c/fields/Is_PDF_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_PDF_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PDF Generated?</label>
    <type>Checkbox</type>
</CustomField>