force-app/main/default/objects/SBQQ__Quote__c/fields/Late_Payment_Invoice_Interest__c.field-meta.xml
<CustomField>
    <fullName>Late_Payment_Invoice_Interest__c</fullName>
    <inlineHelpText>Any late payment of an Invoice shall attract an interest @&lt;percent&gt; p.a. basis till the payment is cleared by Customer.</inlineHelpText>
    <label>Late Payment Invoice Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>18%</fullName>
                <default>true</default>
                <label>18%</label>
            </value>
            <value>
                <fullName>12%</fullName>
            </value>
            <value>
                <fullName>6%</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>