force-app/main/default/objects/SBQQ__Quote__c/fields/Line_Item_Count_SCF__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Count_SCF__c</fullName>
    <description>Count of Line Items where SCF Type is populated</description>
    <label>Line Item Count SCF</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SCF_Type__c</field>
        <operation>equals</operation>
        <value>Cancellation, Deactivation, Facility Change, Upgrade/Downgrade</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>