force-app/main/default/objects/SBQQ__Quote__c/fields/Line_Item_Count_TOS__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Count_TOS__c</fullName>
    <label>Line Item Count TOS</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SCF_Type__c</field>
        <operation>equals</operation>
        <value>Transfer of Service</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>