force-app/main/default/objects/SBQQ__Quote__c/fields/Lines_pending_for_Commercial_Approval__c.field-meta.xml
<CustomField>
    <fullName>Lines_pending_for_Commercial_Approval__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O2u000000KG18EAG/view?fv0=&quot; &amp;Id,&quot;Report&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lines pending for Commercial Approval</label>
    <type>Text</type>
</CustomField>