force-app/main/default/objects/SBQQ__Quote__c/fields/Master_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract_Number__c</fullName>
    <formula>SBQQ__MasterContract__r.Contract_Number__c</formula>
    <label>Master Contract Number</label>
    <type>Text</type>
</CustomField>