force-app/main/default/objects/SBQQ__Quote__c/fields/Master_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract_Status__c</fullName>
    <description>Stamp Master Contract Status in Amendment &amp; Renewal Quotes on Creation. This Status is used during contract generation for TOS, Bill Cycle Change &amp; Address Change SCFs.</description>
    <label>Master Contract Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>