force-app/main/default/objects/SBQQ__Quote__c/fields/New_Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Bill_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GG: Needed for Bill Address SCF</description>
    <label>New Bill To Address</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria- new bill to address.</errorMessage>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Quotes (New Billing Address)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>