force-app/main/default/objects/SBQQ__Quote__c/fields/New_Bill_To_State__c.field-meta.xml
<CustomField>
    <fullName>New_Bill_To_State__c</fullName>
    <description>GG: Needed for Bill Address SCF</description>
    <formula>New_Bill_To_Address__r.State2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Bill To State</label>
    <type>Text</type>
</CustomField>