force-app/main/default/objects/SBQQ__Quote__c/fields/New_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>New_Line_Count__c</fullName>
    <label>New Line Count</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SCF_Type__c</field>
        <operation>equals</operation>
        <value>New Line</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Component_Quantity__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>